--- a/index.html
+++ b/index.html
@@ -624,14 +624,14 @@
         <div class="centered">
             <h1 class="faq">FAQ</h1>
             <h2>What time should I arrive at the ceremony?</h2>
-            <p>Please arrive no later than 3pm.</p>
+            <p>Please arrive no later than 3pm, can't wait to see you there!</p>
             <br>
             <h2>What is the dress code?</h2>
-            <p>This is a formal even so we ask that you please wear a suit or dress.</p>
+            <p>We are asking our guests to please dress in <a href="test">formal </a>attire.</p>
             <br>
 
             <h2>Will children be in attendance?</h2>
-            <p>Unfortunatley we are not able to accomodate children at this event.</p>
+            <p>We love your kids but thought you might like a night off. Adults only please!</p>
             <br>
 
             <h2>How do I get to the venue?</h2>
