--- a/index.html
+++ b/index.html
@@ -103,24 +103,21 @@
         </div>
     </div>
 
-    <div id="blueshuttermodal" class="modal">
+    <div id="airbnbmodal" class="modal">
         <div class="modal-content">
             <span class="close4"><i class="fa-solid fa-x"></i></span>
-            <h1 class="modal-header">Blue Shutters Inn</h1>
-            <p class="modal-p">You’ll be amazed by the views at the Blue Shutters – it’s often the first impression…and
-                a lasting one. Summer or winter, morning or evening, from the beach just outside our door or from your
-                own room, the views are breathtaking. The Blue Shutters Beachside Inn –offers a variety of uniquely decorated rooms and apartments, all but three offer breathtaking views of Good Harbor Beach.</p>
+            <h1 class="modal-header">AirBnB</h1>
+            <p class="modal-p">There are some beautiful AirBnB stays in the Gloucester area we encourage you to check out! We have setup a link below with the dates and locations so you can browse some listings to see what is available.</p>
             <div class="hotel-modal-grid">
                 <div class="directions">
-                    <h3>Directions</h3>
+                    <h3>Search AirBnB Below</h3>
                     <a
-                        href="https://www.google.com/maps/place/Blue+Shutters+Beachside+Inn/@42.6182354,-70.6419797,17z/data=!3m1!4b1!4m8!3m7!1s0x89e3257656dd1a1f:0xcc15da8aeab36ca9!5m2!4m1!1i2!8m2!3d42.6183032!4d-70.6371141">
-                        <b>Blue Shutters Beachside Inn</b><br>1 Nautilus Road<br>Gloucester, MA 01930</a>
+                        href="https://www.airbnb.com/s/Gloucester--MA--United-States/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_lengths%5B%5D=one_week&price_filter_input_type=0&price_filter_num_nights=5&date_picker_type=calendar&checkin=2023-11-03&checkout=2023-11-05&adults=1&query=Gloucester%2C%20MA&place_id=ChIJMQBzhoIk44kR7cJvMKu31eo&source=structured_search_input_header&search_type=autocomplete_click">
+                        <img src="/imgs/airbnb_long.png" width="200px"></a>
                 </div>
-                <div class="reservations">
-                    <h3>Reservations</h3>
-                    <p>Call <a href="tel:978-283-1198">978-283-1198</a> to make a reservation.</p>
-                </div>
+
+
+
             </div>
         </div>
     </div>
@@ -389,28 +386,7 @@
     <div class="pages page7" id="section7">
         <h1 class="hoteltitle
 ">Hotel Information</h1>
-        <!-- <div class="hotelgrid">
-            <div class="hotelgridlabel hotelgriditems">
-                <div class="primlabel">Wedding</div>
-            </div>
-            <div class="hotelgrid1-1 hotelgriditems hotelname"><a class="hotellink" target="_blank"
-                    href="https://www.beauporthotel.com/">The Beauport</a></div>
-            <div class="hotelgrid1-2 hotelgriditems hoteltelephone">
-                <div><a class="hotellink" href="tel:978-282-0008">Call 978-282-0008 for Reservation</a></div>
-            </div>
-            <div class="hotelgridlabel2 hotelgriditems hotelname"></div>
-            <div class="hotelgrid2-1 hotelgriditems hotelname"><a class="hotellink" target="_blank"
-                    href="https://blueshuttersbeachside.com/">Blue Shutters</a></div>
-            <div class="hotelgrid2-2 hotelgriditems hoteltelephone">
-                <div><a class="hotellink" href="tel:978-283-1198">Call 978-283-1198 for Reservation</a></div>
-            </div>
-            <div class="hotelgridlabel3 hotelgriditems hotelname"></div>
-            <div class="hotelgrid3-1 hotelgriditems hotelname"><a class="hotellink" target="_blank"
-                    href="https://www.oceanhousegloucester.com/">Ocean House</a></div>
-            <div class="hotelgrid3-2 hotelgriditems hoteltelephone">
-                <div><a class="hotellink" href="tel:978-283-7600">Call 978-283-7600 for Reservation</a></div>
-            </div>
-        </div> -->
+
         <div class="image-grid">
             <a href="/#section7" id="beauportmodal-btn" class="image-cont">
                 <img class="img-img" src="/imgs/Beauport-Hotel-Gloucester-7.jpg" />
@@ -421,9 +397,9 @@
                 <p class="img-descr">Ocean House</p>
             </a>
 
-            <a href="/#section7" id="blueshuttermodal-btn" class="image-cont">
-                <img class="img-img" src="/imgs/blue-shutters-beachside.jpg" />
-                <p class="img-descr">Blue Shutters</p>
+            <a href="/#section7" id="airbnbmodal-btn" class="image-cont">
+                <img class="img-img" src="/imgs/airbnb.jpg" />
+                <p class="img-descr">AirBnB</p>
             </a>
         </div>
 
@@ -595,7 +571,7 @@
 
 
                 <input id="plus1Name" class="plus1Name" style="display:none" pattern="^\S+\s\S+$"
-                    placeholder="Last Name, First Name" role="combobox" autocomplete="off" list="suggestions">
+                    placeholder="First and Last Name" role="combobox" autocomplete="off" list="suggestions">
 
 
 
@@ -627,7 +603,7 @@
             <p>Please arrive no later than 3pm, can't wait to see you there!</p>
             <br>
             <h2>What is the dress code?</h2>
-            <p>We are asking our guests to please dress in <a href="test">formal </a>attire.</p>
+            <p>We are asking our guests to please dress in <a href="https://www.theknot.com/content/formal-wedding-attire">formal </a>attire.</p>
             <br>
 
             <h2>Will children be in attendance?</h2>
