--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7WG52QY3BF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-7WG52QY3BF');
+</script>
 <body>
 
     <div id="myModal" class="modal">
