--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                     <input type="text" name="other allergy" id="otherallergy" placeholder="Other">
                 </div>
 
-                <p>Second guest or plus one?</p>
+                <p class="secondQ">Second guest or plus one?</p>
 
 
                 <label class="switch">
