--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                     <input type="checkbox" name="Vegan" id="vegan">
                     <label class="veganlabel" for="vegan">Vegan</label> 
 
-                    <input type="text" name="other allergy" id="otherallergy" placeholder="Other">
+                    <input type="text" name="other allergy" id="otherallergy" placeholder="Other" onkeypress="colorChange()">
                 </div>
 
                 <p class="secondQ">Second guest or plus one?</p>
@@ -679,7 +679,7 @@
         }
       </script> -->
       <script type="text/javascript" src="/js/mainscript.js"></script>
-
+      <script type="text/javascript" src="/js/statechange.js"></script>
     <script type="text/javascript" src="/js/gallery.js"></script>
 
     <script type="text/javascript" src="/js/sticky.js"></script>
