--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                     <input type="checkbox" name="Vegan" id="vegan2">
                     <label class="veganlabel2" for="vegan2">Vegan</label> 
 
-                    <input type="text" name="other allergy" id="otherallergy2" placeholder="Other">
+                    <input type="text" name="other allergy" id="otherallergy2" onkeypress="colorChange2()" placeholder="Other">
                 </div>
 
 
