--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
 
                 <label class="switch3" for="attend">
-                    <input type="checkbox" id="attend" name="attend" class="attend">
+                    <input type="checkbox" id="attend" name="attend" class="attend" onclick="plusOne()">
                     <span class="slider"><span class="textyesno"></span></span>
                 </label>
 
