--- a/index.html
+++ b/index.html
@@ -644,6 +644,15 @@
                 </label>
 
 
+                <p class="cocktailQ">Will you be joining us for cocktails Saturday evening?</p>
+
+
+                <label class="switch4" for="cocktails">
+                    <input type="checkbox" id="cocktails" name="cocktails" class="cocktails">
+                    <span class="slider"><span class="textyesno"></span></span>
+                </label>
+
+
                 <button type="submit" class="submitbutton">Submit</button>
             </form>
 
