--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         </div>
         <div class="griditem8"><button class="menubasic" onclick="window.location.href='/#section8';">FAQ</button>
         </div>
-        <div class="griditem4"><button class="menubasic" onclick="window.location.href='/#section6';"
-                target="_blank">Registry</button></div>
+        <div class="griditem4"><button class="menubasic" onclick="window.location.href='/#section6';" target="_blank">Registry</button>
+        </div>
         <div class="griditem5">
             <nav role="navigation">
                 <div id="menuToggle" class="menuToggle">
@@ -386,8 +386,8 @@
                 </div>
             </div>
 
-            <div class="timedate">3pm Sunday<br>
-                <p class="subheading">November 5th 2023</p>
+            <div class="timedate">3:30pm Sunday<br>
+                <p class="subheading">November 5th 2023<br><button class="schedulebutton" onclick="window.location.href='/#section9';"><i class="fa-solid fa-calendar-days"></i>Schedule</button>
             </div>
         </div>
     </div>
@@ -664,6 +664,7 @@
 
         </div>
     </div>
+    <div class="offsetbutton" id="section9"></div>
     <div class="pages page9">
         <div class="centered">
             <h1 class="scheduletitle">SCHEDULE</h1>
@@ -672,20 +673,20 @@
                 <h2 class="datetime datetimeline1">Nov. 4th</h2>
 <p class="timelabel welcome">7:30 PM <br>Welcome Drinks<br><a class="location">TBD - Check Back Soon!</a></p>
 <img src="/imgs/welcome.png" alt="welcome" class="timeimage welcomeimg">
-
+<span class="gap1"> </span>
                 <h2 class="datetime datetimeline2">Nov. 5th</h2>
 <p class="timelabel ceremony">3:30 PM <br>Ceremony<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport</a></p>
 <img src="/imgs/rings.png" alt="rings" class="timeimage ceremonyimg">
-
+<div class="gap2"></div>
 <p class="timelabel cocktail">4:00 PM <br>Cocktail Hour<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport</a></p>
 <img src="/imgs/champagne.png" alt="cocktail" class="timeimage cocktailimg">
-
+<div class="gap3"></div>
 <p class="timelabel reception">5:00 PM <br>Reception<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport</a></p>
 <img src="/imgs/dancing.png" alt="dancing" class="timeimage receptionimg">
-
+<div class="gap4"></div>
 <p class="timelabel afterparty">9:00 PM <br>After Party<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport</a></p>
 <img src="/imgs/party.png" alt="party" class="timeimage afterpartyimg">
-
+<span class="gap5"> </span>
 <h2 class="datetime datetimeline3">Nov. 6th</h2>
 <p class="timelabel brunch">9:00 AM <br>Brunch<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport Pavillion Room</a></p>
 <img src="/imgs/brunch.png" alt="brunch" class="timeimage brunchimg">
