--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
             <p class="notice">On the day of the ceremony please arrive no later than 3:00pm, we can't wait to see you there!</p>
             <div class="schedule">
                 <h2 class="datetime datetimeline1">Nov. 4th</h2>
-<p class="timelabel welcome">7:30 PM <br>Welcome Drinks<br><a class="location">TBD - Check Back Soon!</a></p>
+<p class="timelabel welcome">7:30 PM <br>Welcome Drinks<br><a class="location" href="https://www.google.com/maps/place/Minglewood+Harborside/@42.6115253,-70.6650686,19.92z/data=!4m6!3m5!1s0x89e3251e9cd60537:0x7e0d44564a84dd79!8m2!3d42.6116088!4d-70.6646715!16s%2Fg%2F1tfkx9sn?entry=ttu">Minglewood Harborside</a></p>
 <img src="/imgs/welcome.png" alt="welcome" class="timeimage welcomeimg">
 <span class="gap1"> </span>
                 <h2 class="datetime datetimeline2">Nov. 5th</h2>
@@ -690,7 +690,6 @@
 <h2 class="datetime datetimeline3">Nov. 6th</h2>
 <p class="timelabel brunch">9:00 AM <br>Brunch<br><a class="location" href="https://www.google.com/maps/place/Beauport+Hotel+Gloucester/@42.609361,-70.6678441,17z/data=!3m2!4b1!5s0x89e3251ee58d4321:0xe646e3ba886a1adf!4m9!3m8!1s0x89e3251eefc84c31:0xffa9ac9a5e04543e!5m2!4m1!1i2!8m2!3d42.6093571!4d-70.6652692!16s%2Fg%2F11b809zdl5?entry=ttu">The Beauport Pavillion Room</a></p>
 <img src="/imgs/brunch.png" alt="brunch" class="timeimage brunchimg">
-
             </div>
             <style>
 
